Fixed layout issue of section one - wrong stacking of containers

--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    width: 100vw;
+}
+
+.content {
+    height: 22.5vh;
+    width: 1000px;
+    display: flex;
+    /* outline: 2px solid red; */
+    align-items: flex-end;
 }
 
 /* section one */
@@ -18,11 +27,15 @@
     display: flex;
     background-color: #1F2937;
     color: white;
+    flex-direction: column;
+    align-items: center;
 }
 
-.header {
+nav {
     height: 5vh;
     display: flex;
+    width: 1000px;
+    /* outline: 2px solid red; */
 }
 
 
@@ -30,6 +43,7 @@
 .section-two {
     height: 22.5vh;
     display: flex;
+    justify-content: center;
 }
 
 
@@ -38,6 +52,7 @@
     height: 22.5vh;
     display: flex;
     background-color: #E5E7EB;
+    justify-content: center;
 }
 
 
@@ -46,6 +61,7 @@
 .section-four {
     height: 22.5vh;
     display: flex;
+    justify-content: center;
 }
 
 
